@@ -4,17 +4,16 @@
 	 name="billard"
 	 type="machpuzzle" 
 	 section="/computer"
-	 icon="boardicons/billard.png" 
+	 icon="boardicons/foot.png"
 	 difficulty="1"
 	 author="Bruno Coudoin (bruno.coudoin@free.fr)"
 	 boarddir="">
-	 <_title>The game of billiards</_title>
- 	 <_description>Shoot the ball into the hole</_description>
+	 <_title>The football game</_title>
+ 	 <_description>Put the ball into the goal</_description>
 	<_prerequisite>Mouse manipulation</_prerequisite>
-	<_manual>Point and click on the ball to set the
-speed and direction of the ball. The closer you click to the
+	<_manual>Point and click on the ball to set its speed and direction. The closer you click to the
 center, the slower the ball moves.</_manual>
-	<_goal>Shoot the ball into the hole</_goal>
+	<_goal>Put the ball into the black hole on the right</_goal>
 	<_credit></_credit>
   </Board>
   <Data directory=""/>
