@@ -1,3 +1,7 @@
+2005-06-15  Yves Combe  <yves@ycombe.net>
+
+	* Change billard to football (NTBF suggestion).
+
 2005-06-14  Yves Combe  <yves@ycombe.net>
 
 	* update INSTALL for libtool.
